MISC-fix-39a19.2: Disabled button show/hide menu when no menu module loaded

--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -22,9 +22,9 @@
       jQuery('#left_menu').attr('menu_hidden', '1');
     }
   });
-</script>
-
-<!--
+</script><!--
+IF MENU_CUSTOMIZE
+--><!--
   IF MENU_START_HIDE
   --><style type="text/css">
     #left_menu {
@@ -68,9 +68,9 @@
     <!-- ENDIF -->
   </style>
 
-  <input type="button" id="left_menu_show" value="{$MENU_START_BUTTON_SHOW}" />
-
-  <table cellspacing="0" cellpadding="0" id="left_menu" class="c_l"><!--
+  <input type="button" id="left_menu_show" value="{$MENU_START_BUTTON_SHOW}" /><!--
+ENDIF
+  --><table cellspacing="0" cellpadding="0" id="left_menu" class="c_l"><!--
   BEGIN menu
     --><!--
     IF menu.LEVEL == 'header' --><!--
