SYS-misc-39a20.1: Support for player_premium v3c0

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -221,6 +221,10 @@ table {margin-left: auto; margin-right: auto}
   font-weight: bold;
 }
 
+.disabled {
+  color: grey;
+}
+
 .ok, .success, .positive {
   color: lime;
 }
@@ -242,7 +246,7 @@ table {margin-left: auto; margin-right: auto}
 }
 
 .notice_bg, .zero_bg, .neutral_bg {
-  background-color: #AAAA00;
+  background-color: #AAAA00 !important;
 }
 
 .warning_bg {
