--- a/design/templates/OpenGame/page_hint.tpl.html
+++ b/design/templates/OpenGame/page_hint.tpl.html
@@ -7,7 +7,7 @@
 <!-- IF $PAGE_HINT -->
 <br>
 <table width="<!-- IF PAGE_HINT_WIDTH -->{PAGE_HINT_WIDTH}<!-- ELSE -->519px<!-- ENDIF -->" border="0" cellpadding="0" cellspacing="1">
-  <tr><td class="c">{L_sys_hint}</td></tr>
-  <tr><th><div class="hint">{$PAGE_HINT}</div></th></tr>
+  <tr><th class="c_c  neutral">{L_sys_hint}</th></tr>
+  <tr><td><div class="hint warning">{$PAGE_HINT}</div></td></tr>
 </table>
 <!-- ENDIF -->
