MISC-misc-39a20.4: Comments in log tables for admin DM/MM chages. Also reworked menu template to work without minifier

--- a/design/templates/OpenGame/admin/adm_metamatter.tpl.html
+++ b/design/templates/OpenGame/admin/adm_metamatter.tpl.html
@@ -5,7 +5,7 @@
     <tr class="c_c"><th colspan="2">{L_adm_mm_title}</th></tr>
     <tr class="c_c">
       <td>{L_adm_mm_user}</td>
-      <td><input name="id_user" type="text" value="{ID_USER}"/></td>
+      <td><input name="id_user" type="text" value="{ID_USER}" /><br />{L_adm_dm_change_hint}</td>
     </tr>
     <tr class="c_c">
       <td>{L_sys_metamatter}</td>
