--- a/design/templates/OpenGame/admin/admin_darkmatter.tpl.html
+++ b/design/templates/OpenGame/admin/admin_darkmatter.tpl.html
@@ -5,13 +5,15 @@
     <tr><td class="c" colspan="2">{L_adm_dm_title}</td></tr>
     <tr>
       <th>{L_adm_dm_user}</th>
-      <th><input name="id_user" type="text" value="{ID_USER}"/></th>
+      <th><input name="id_user" type="text" value="{ID_USER}"/><br />{L_adm_dm_change_hint}</th>
     </tr>
-    <tr><td class="c" colspan="2">{L_adm_dm_oruser}</td></tr>
+<!--
+    <tr><td class="c_l" colspan="2">{L_adm_dm_oruser}</td></tr>
     <tr>
       <th>{L_adm_dm_planet}</th>
       <th><input name="id_planet" type="text" value="{ID_PLANET}"/></th>
     </tr>
+-->
     <tr>
       <th>{L_dark_matter}</th>
       <th><input name="points" type="text" value="{POINTS}" /></th>
