SYS-feat-39a21.0: Added Game Events support

--- a/design/templates/OpenGame/server_info.tpl.html
+++ b/design/templates/OpenGame/server_info.tpl.html
@@ -38,15 +38,15 @@
   </tr>
   <tr>
     <th>{L_adm_opt_speed} {L_adm_opt_game_gspeed}</th>
-    <th>x&nbsp;{C_game_speed}</th>
+    <th>x&nbsp;{GAME_SPEED}</th>
   </tr>
   <tr>
     <th>{L_adm_opt_speed} {L_adm_opt_game_fspeed}</th>
-    <th>x&nbsp;{C_fleet_speed}</th>
+    <th>x&nbsp;{FLEET_SPEED}</th>
   </tr>
   <tr>
     <th>{L_adm_opt_speed} {L_adm_opt_game_pspeed}</th>
-    <th>x&nbsp;{C_resource_multiplier}</th>
+    <th>x&nbsp;{RESOURCE_MULTIPLIER}</th>
   </tr>
   <tr>
     <th class="c">{L_adm_opt_galaxies}</th>
